NetBSD Problem Report #43110

From jld@xlerb.net  Sun Apr  4 05:31:08 2010
Return-Path: <jld@xlerb.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 7577C63B11D
	for <gnats-bugs@gnats.NetBSD.org>; Sun,  4 Apr 2010 05:31:08 +0000 (UTC)
Message-Id: <20100404053105.D018015088@planetarium.xlerb.net>
Date: Sun,  4 Apr 2010 01:31:05 -0400 (EDT)
From: jld@panix.com
Reply-To: jld@panix.com
To: gnats-bugs@gnats.NetBSD.org
Subject: "modload null" but "modunload nullfs"?
X-Send-Pr-Version: 3.95

>Number:         43110
>Category:       kern
>Synopsis:       The null.kmod module calls itself "nullfs" rather than "null".
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Apr 04 05:35:00 +0000 2010
>Closed-Date:    Sat Apr 10 18:16:18 +0000 2010
>Last-Modified:  Sun Apr 11 06:40:02 +0000 2010
>Originator:     Jed Davis
>Release:        5.99.15
>Organization:
>Environment:
System: NetBSD cowbell.xlerb.net 5.99.15 NetBSD 5.99.15 (DDD) #36: Wed Aug 12 01:01:00 EDT 2009  jld@planetarium.xlerb.net:/bag/srcs/rfpm/sys/arch/i386/compile/DDD i386
Architecture: i386
Machine: i386
>Description:

The filesystem module corresponding to mount_null(8) is installed
as "null.kmod", and therefore is loaded by "modload null"; but it
identifies itself as "nullfs", and therefore must be unloaded by
"modunload nullfs", not "modunload null".

>How-To-Repeat:

See above.  (Obviously this needs a kernel which is MODULAR and
also not MONOLITHIC.)

>Fix:

Someone should decide whether it's "null" or "nullfs" and change
the module filename resp. the module's internal name.

>Release-Note:

>Audit-Trail:
From: Andrew Doran <ad@NetBSD.org>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@netbsd.org, gnats-admin@netbsd.org,
	netbsd-bugs@netbsd.org
Subject: Re: kern/43110: "modload null" but "modunload nullfs"?
Date: Wed, 7 Apr 2010 10:18:28 +0000

 Module should be named for the file system type given to mount(), so that
 autoload can work.

From: Jed Davis <jld@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43110 CVS commit: src/sys/miscfs/nullfs
Date: Sat, 10 Apr 2010 18:14:54 +0000

 Module Name:	src
 Committed By:	jld
 Date:		Sat Apr 10 18:14:54 UTC 2010

 Modified Files:
 	src/sys/miscfs/nullfs: null_vfsops.c

 Log Message:
 Change the nullfs module's actual name to "null", to match the name
 it's installed under and the name of the filesystem.

 Fixes PR kern/43110.


 To generate a diff of this commit:
 cvs rdiff -u -r1.79 -r1.80 src/sys/miscfs/nullfs/null_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: jld@NetBSD.org
State-Changed-When: Sat, 10 Apr 2010 18:16:18 +0000
State-Changed-Why:
Fixed in -current.


From: Antti Kantee <pooka@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43110 CVS commit: src/sys
Date: Sun, 11 Apr 2010 06:36:26 +0000

 Module Name:	src
 Committed By:	pooka
 Date:		Sun Apr 11 06:36:25 UTC 2010

 Modified Files:
 	src/sys/fs/filecorefs: filecore_vfsops.c
 	src/sys/fs/msdosfs: msdosfs_vfsops.c
 	src/sys/miscfs/umapfs: umap_vfsops.c

 Log Message:
 Make module name match MOUNT_NAME.  Inspired by PR kern/43110.


 To generate a diff of this commit:
 cvs rdiff -u -r1.61 -r1.62 src/sys/fs/filecorefs/filecore_vfsops.c
 cvs rdiff -u -r1.81 -r1.82 src/sys/fs/msdosfs/msdosfs_vfsops.c
 cvs rdiff -u -r1.82 -r1.83 src/sys/miscfs/umapfs/umap_vfsops.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.