Make module name match MOUNT_NAME.  Inspired by PR kern/43110.